# slamcaster

./: .gitignore  README.md  pyproject.toml
data/draws/: australian_open_2026_actual_results.csv  australian_open_2026_mens.csv  us_open_2025_actual_results.csv  us_open_2025_mens.csv
scripts/: build_dataset.py  build_tournament_files.py  download_data.py  evaluate_tournament.py  ingest_draw.py  predict_tournament.py  run_backtests.py  train_model.py  validate_draw.py
src/slamcaster/: __init__.py  bracket.py  calibrate.py  config.py  data_sources.py  draw_ingest.py  elo.py  evaluate.py  features.py  load_data.py  model.py  reports.py  simulate.py  tournament_io.py  utils.py
