 [project]
 name = "slamcaster"
 version = "0.1.0"
 description = "ML-based tennis tournament outcome predictor (ATP)."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "pandas>=2.0",
   "numpy>=1.24",
   "scikit-learn>=1.3",
   "matplotlib>=3.7",
   "joblib>=1.3",
   "pyyaml>=6.0",
   "requests>=2.31",
   "tqdm>=4.66",
 ]
 
 [project.optional-dependencies]
 xgb = ["xgboost>=2.0"]
 dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0"]
 
 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
